--- a/IBTProcessor/IBTProcessor.csproj
+++ b/IBTProcessor/IBTProcessor.csproj
@@ -52,9 +52,14 @@
       <DependentUpon>IBTProcessor.cs</DependentUpon>
     </Compile>
     <Compile Include="IBTTermSheet.cs" />
+    <Compile Include="IPartner.cs" />
+    <Compile Include="PartnerA.cs" />
+    <Compile Include="PartnerB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="xmlconvertor.cs" />
+    <Compile Include="SMTP.cs" />
+    <Compile Include="XMLconvertor.cs" />
+    <Compile Include="XMLgenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
